Lab_1__Introduction_to_Containers_and_OpenShift/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    app: hello-world
spec:
  containers:
  - name: hello-container
    image: registry.access.redhat.com/ubi8/ubi:latest
    command: ["/bin/bash"]
    args: ["-c", "while true; do echo 'Hello from Pod'; sleep 30; done"]
