Lab_1__Introduction_to_Containers_and_OpenShift/simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
