Lab_1__Introduction_to_Containers_and_OpenShift/simple-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-route
spec:
  to:
    kind: Service
    name: hello-service
  port:
    targetPort: 8080
